# TFG

./: .gitignore  README.md
doc/: .~lock.apuntes_box_counting.doc#  .~lock.memoria_final.docx#  apuntes_box_counting.doc  memoria.odt  presentacion.pptx  tiempos_persons.csv
doc/entrega/: declaracion-trabajo-inedito.doc  resumen_TFG.docx
doc/graficas/: fase1_error.csv  fase1_error_pira.csv  fase1_fase2_error.csv  fase1_fase2_fase3_error.csv  fase3_fase5_dimension.csv  fase3_fase5_dimension_piramide.csv  iteracinoes_dimension_media.csv  iteraciones_dimension.csv  varia_iteraciones_error.csv
doc/imagenes/: D_curva_koch.xcf  bounding_box01.xcf
libs/: untitled.cpp
projects/box_counting/: compile.sh
projects/box_counting/resultados/: error_varia_iteraciones.csv
projects/box_counting/resultados/basico/: LEEME.txt
projects/box_counting/resultados/bottle/: results.txt
projects/box_counting/resultados/bowl/: results.txt
projects/box_counting/resultados/plant/: results.txt
projects/box_counting/src/: CMakeLists.txt  linear_regression.cpp  main.cpp
projects/box_counting_refactor/: CMakeLists.txt
projects/box_counting_refactor/include/: box_counting.h  linear_regression.h  ransac.h  util.h
projects/box_counting_refactor/lib/: box_counting.cpp  linear_regression.cpp  ransac.cpp  util.cpp
projects/box_counting_refactor/src/: main.cpp
projects/fractal_generator/src/: main.cpp
projects/qt_camera_visualizer/forms/: pclKinect.ui
projects/qt_camera_visualizer/include/: pclKinect.h
projects/qt_camera_visualizer/lib/: pclKinect.cpp
(+178 files in other folders)
